2011-08-05  David S. Miller  <davem@davemloft.net>

	* config/tc-sparc.c (v9a_asr_table): Add "cps".
	(sparc_ip): Handle '4', '5' and '(' format codes.

2011-08-04  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/13056
	* output-file.c (output_file_close): Call bfd_cache_close_all
	on error.

	* write.c (write_object_file): Revert the last change.

2011-08-04  Alan Modra  <amodra@gmail.com>

	* write.c (write_object_file): Call set_symtab even if we had
	errors.

2011-08-04  Tristan Gingold  <gingold@adacore.com>

	* config/obj-elf.c (obj_elf_section): Do not free name.

2011-08-03  James Greenhalgh  <james.greenhalgh@arm.com>

	* config/tc-arm.c (do_t_strexbh): New.
	(insns): Update accordingly.

2011-08-01  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/13048
	* config/tc-i386.c (handle_quad): Removed.
	(md_pseudo_table): Remove "quad".
	(tc_gen_reloc): Don't check BFD_RELOC_64 for disallow_64bit_reloc.
	(x86_dwarf2_addr_size): New.

	* config/tc-i386.h (x86_dwarf2_addr_size): New.
	(DWARF2_ADDR_SIZE): Likewise.

2011-08-01  Nick Clifton  <nickc@redhat.com>

	PR ld/12974
	* config/tc-arm.c (literal_pool): Add locs field.
	(add_to_lit_pool): Initialise the locs entry for the new literal.
	(s_ltorg): Generate a DWARF2 line number entry for each emitted
	literal pool entry.

2011-08-01  Tristan Gingold  <gingold@adacore.com>

	* write.c (write_relocs): Fix -Wshadow in DEBUG3 and DEBUG4.

2011-08-01  Tristan Gingold  <gingold@adacore.com>

	* frags.c (frag_grow): Simplify the code.

2011-07-30  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/tc-mips.c (nops_for_vr4130): Revert previous commit.

2011-07-29  Maciej W. Rozycki  <macro@codesourcery.com>

	* config/tc-mips.c: Adjust comments throughout.
	(reglist_lookup): Reshape code.
	(jmp_reloc_p, jalr_reloc_p): Reformat.
	(got16_reloc_p, hi16_reloc_p, lo16_reloc_p): Handle microMIPS
	relocations.
	(gpr_mod_mask): Remove unused variable.
	(gpr_read_mask, gpr_write_mask): Reshape code.